# Serveur-Sauvegarde

./: .gitignore  Cargo.toml  README.md  cert.pem  database.db  key.pem
src/: lib.rs  main.rs
src/domain/: create_file_hash.rs  delete_file_hash.rs  mod.rs  read_all_file_hash.rs  utils.rs
src/domain/entities/: hash.rs  mod.rs
src/driven/: mod.rs  stockage.rs  stockage_sqlite.rs
