[package]
name = "sauvegarde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
futures-util = "0.3.29"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"
sha2 = "0.10.8"
walkdir = "2.4.0"
